added link to Netlify

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,14 @@ h3 {
   background: #71c9ce;
   color: white;
 }
+a:link {
+  color: #212529;
+  font-size: 12px;
+  text-decoration: none;
+}
+p {
+  font-size: 12px;
+}
 #celsius-link {
   text-decoration: none;
   color: #212529;
